В общем пытался исрпавить картинки, не получилось nt, немного пофиксил что-то.

--- a/web/index.html
+++ b/web/index.html
@@ -31,19 +31,23 @@
             <li id="buy-model"><a href="#">Купить модель</a></li>
             <li id="gain-panel"><a href="#">Прибыль</a></li>
             <li id="edit-myself"><a href="#">Изменить себя</a>
-        </ul>
-        <ul class="log-bar">
-            <li>
-                <a href="#" id="logIn">Войти</a>
-            </li>
-            <li>
-                <a href="#" id="logOut">Выйти</a>
-            </li>
-        </ul>  
-    </header>
-    <p id="info" class="text-info">&nbsp;</p>
-    <main id="content"></main>
+            </ul>
+            <ul class="log-bar">
+                <li>
+                    <a href="#" id="logIn">Войти</a>
+                </li>
+                <li>
+                    <a href="#" id="logOut">Выйти</a>
+                </li>
+            </ul>  
+        </header>
+        <p id="info" class="text-info">&nbsp;</p>
+    <main>
+        <div class="graphic"></div>
+        <div id="content"></div>
+    </main>
     <footer>Dzjubenko 2022</footer>
+    <script src="js/App.js"></script>
     <script type="module" src="js/index.js"></script>
     <script name="dropdown">
         function myDrop1() {
