Добавил партиклы, добавил обновление данных сессии.

--- a/web/index.html
+++ b/web/index.html
@@ -27,23 +27,30 @@
                     <a id="edit-user" href="#">Изменить</a>
                 </div>
             </div>
-            <li id="admin-panel"><a href="#">Панель админа</a></li>
-            <li id="buy-model"><a href="#">Купить модель</a></li>
-            <li id="gain-panel"><a href="#">Прибыль</a></li>
-            <li id="edit-myself"><a href="#">Изменить себя</a>
-            </ul>
-            <ul class="log-bar">
-                <li>
-                    <a href="#" id="logIn">Войти</a>
-                </li>
-                <li>
-                    <a href="#" id="logOut">Выйти</a>
-                </li>
-            </ul>  
-        </header>
-        <p id="info" class="text-info">&nbsp;</p>
+                <li id="admin-panel"><a href="#">Панель админа</a></li>
+                <li id="buy-model"><a href="#">Купить модель</a></li>
+                <li id="gain-panel"><a href="#">Прибыль</a></li>
+                <li id="edit-myself"><a href="#">Изменить себя</a>
+        </ul>
+        <div class="user-bank-container">
+            <p id="user-bank">&nbsp;</p>
+        </div>
+        <ul class="log-bar">
+            <li>
+                <a href="#" id="logIn">Войти</a>
+            </li>
+            <li>
+                <a href="#" id="logOut">Выйти</a>
+            </li>
+        </ul>  
+    </header>
+    <p id="info" class="text-info">&nbsp;</p>
     <main>
-        <div class="graphic"></div>
+        <div class="graphic1 graphic"></div>
+        <div class="graphic2 graphic"></div>
+        <div class="graphic3 graphic"></div>
+        <div class="graphic4 graphic"></div>
+        <div class="graphic5 graphic"></div>
         <div id="content"></div>
     </main>
     <footer>Dzjubenko 2022</footer>
