Реализовал удаление авторизованного юзера из списка и гл.админа.

--- a/web/index.html
+++ b/web/index.html
@@ -51,6 +51,7 @@
         <div class="graphic3 graphic"></div>
         <div class="graphic4 graphic"></div>
         <div class="graphic5 graphic"></div>
+        <div class="graphic6 graphic"></div>
         <div id="content"></div>
     </main>
     <footer>Dzjubenko 2022</footer>
