Отформатировал путь файла картинки под html

--- a/web/test.html
+++ b/web/test.html
@@ -44,8 +44,8 @@
         <div id="adding-shoe" class="shoe-add-container" style="opacity: 0.2">
             <div class="img-side">
                 <div class="img-card">
-                    <img src="../web/WEB-INF/Uploaded_Images/Screenshot_20200903-212610_00000.jpg">
-                    <!-- <img src="Images/upload-secondary.png"> -->
+                    <!-- <img src="file:///D:\Shoeger\ShoeShop\Снимок экрана 2022-02-19 144128.png"> -->
+                    <img src="Images/upload-secondary.png">
                 </div>
             </div>
             <div class="shoe-info-side">
