НАКОНЕЦ-ТО... Реализовал добавление изображений в базу и их отображение на сайте!

--- a/web/test.html
+++ b/web/test.html
@@ -45,7 +45,7 @@
             <div class="img-side">
                 <div class="img-card">
                     <!-- <img src="file:///D:\Shoeger\ShoeShop\Снимок экрана 2022-02-19 144128.png"> -->
-                    <img src="Images/upload-secondary.png">
+                    <img src="WEB-INF/Uploaded_Images/hey.png">
                 </div>
             </div>
             <div class="shoe-info-side">
