--- a/web/test.html
+++ b/web/test.html
@@ -41,20 +41,35 @@
     </header>
     <p id="info" class="text-info">&nbsp;</p>
     <main id="content">
-        <div class="purchase-container">
+        <div class="shoe-edit-container">
             <div class="top-content">
-                <span class="purchase-title">Покупка обуви</span>
+                <span class="model-edit-title">Изменение обуви</span>
             </div>
             <div class="mid-content">
                 <label for="list models">Список моделей:</label>
-                <select name="list models" id="purchase-list-models">
+                <select name="list models" id="list-models">
 
                 </select>
-                <div class="buy-image">
-                    <img id="modelImage" src="Images/upload/Снимок экрана 2022-01-19 202652.png">
+                <select name="listPictures" id="list-pictures">
+                
+                </select>
+                <div class="wrap-input100 validate-input" data-validate="Enter name">
+                    <input class="input100" type="text" id="model-name" name="modelName" placeholder="Model name">
+                </div>
+                <div class="wrap-input100 validate-input" data-validate="Enter firm">
+                    <input class="input100" type="text" id="model-firm" name="modelFirm" placeholder="Model firm">
+                </div>
+                <div class="wrap-input100 validate-input" data-validate="Enter size">
+                    <input class="input100" type="number" maxlength="2" id="model-size" name="modelSize" placeholder="Model size">
+                </div>
+                <div class="wrap-input100 validate-input" data-validate="Enter price">
+                    <input class="input100" type="number" pattern=".{.2}" id="model-price" name="price" placeholder="Price">
+                </div>
+                <div class="wrap-input100 validate-input" data-validate="Enter amount">
+                    <input class="input100" type="number" id="model-amount" min="1" max="50" name="amount" placeholder="Amount">
                 </div>
                 <div class="container-login100-form-btn">
-                    <button class="login100-form-btn" type="submit" id="submit-purchase">Купить</button>
+                    <button class="login100-form-btn" type="submit" id="submit-edit-model">Изменить</button>
                 </div>
             </div>
         </div>
